--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
   "description": "website",
   "main": "index.js",
   "scripts": {
-    "build": "nodemon --exec npx babel-node src/index.js"
+    "start": "node main.js",
+    "heroku-postbuild": "nodemon --exec npx webpack"
+    // "build": "nodemon --exec npx babel-node src/index.js"
   },
   "repository": {
     "type": "git",
